; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/8390/extr_mac8390.c_dayna_block_output.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/8390/extr_mac8390.c_dayna_block_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@WD_START_PG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i32, i8*, i32)* @dayna_block_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dayna_block_output(%struct.net_device* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* @WD_START_PG, align 4
  %12 = sub nsw i32 %10, %11
  %13 = shl i32 %12, 8
  %14 = sext i32 %13 to i64
  store i64 %14, i64* %9, align 8
  %15 = load %struct.net_device*, %struct.net_device** %5, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @dayna_memcpy_tocard(%struct.net_device* %15, i64 %16, i8* %17, i32 %18)
  ret void
}

declare dso_local i32 @dayna_memcpy_tocard(%struct.net_device*, i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
